# annoy-node

./: .gitignore  CMakeLists.txt  package-lock.json  package.json  readme.MD  tsconfig.json
.github/workflows/: build.yml
annoy/src/: annoylib.h
src/: AnnoyIndex.cpp  annoy.cpp  annoy.h  binding.cpp  index.ts  test.js
test/: test.ts
